# inha-ideal-agent

./: .env  app.py  pyproject.toml  requirements.txt
src/: firecrawl.py  workflow.py
